Added header to initiatives page and updated links

--- a/initiatives.html
+++ b/initiatives.html
@@ -34,6 +34,105 @@
 
 </head>
 
+<header aria-label="Site Header" class="site-nav team-nav text-2xl bg-black">
+    <div
+      class="mx-auto flex h-16 max-w-screen-xl items-center gap-8 px-4 sm:px-6 lg:px-8"
+    >
+      <a class="block text-teal-600 dark:text-teal-300" href="/">
+        <span class="sr-only">Home</span>
+        <span style="font-family: 'VisbyBold'">9371</span>
+      </a>
+  
+      <div class="flex flex-1 items-center justify-end md:justify-between">
+        <nav aria-label="Site Nav" class="hidden md:block">
+          <ul class="flex items-center gap-6 text-sm">
+            <li>
+              <a
+                class="text-gray-500 transition hover:text-gray-500/75 dark:text-white dark:hover:text-white/75"
+                href="https://www.dalton.org/programs/high-school/curriculum/notable-programs/engineering"
+              >
+                About
+              </a>
+            </li>
+  
+            <li>
+              <a
+                class="text-gray-500 transition hover:text-gray-500/75 dark:text-white dark:hover:text-white/75"
+                href="./team.html"
+              >
+                Team
+              </a>
+            </li>
+  
+            <li>
+              <a
+                class="text-gray-500 transition hover:text-gray-500/75 dark:text-white dark:hover:text-white/75"
+                href="./3d.html"
+              >
+                Robot
+              </a>
+            </li>
+  
+            <li>
+              <a
+                class="text-gray-500 transition hover:text-gray-500/75 dark:text-white dark:hover:text-white/75"
+                href="./contact.html"
+              >
+                Contact
+              </a>
+            </li>
+  
+            <li>
+              <a
+                class="text-gray-500 transition hover:text-gray-500/75 dark:text-white dark:hover:text-white/75"
+                href="./initiatives.html"
+              >
+                Initiatives
+              </a>
+            </li>
+          
+            <li>
+              <a
+                class="text-gray-500 transition hover:text-gray-500/75 dark:text-white dark:hover:text-white/75"
+                href="./livestream.html"
+              >
+                Livestream
+              </a>
+            </li>
+        <li>
+              <a
+                class="text-gray-500 transition hover:text-gray-500/75 dark:text-white dark:hover:text-white/75"
+              >
+                generalrelativity9371.github.io
+              </a>
+            </li>
+          </ul>
+        </nav>
+  
+          <button
+            class="block rounded bg-gray-100 p-2.5 text-gray-600 transition hover:text-gray-600/75 dark:bg-gray-800 dark:text-white dark:hover:text-white/75 md:hidden"
+          >
+            <span class="sr-only">Toggle menu</span>
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              class="h-5 w-5"
+              fill="none"
+              viewBox="0 0 24 24"
+              stroke="currentColor"
+              stroke-width="2"
+            >
+              <path
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                d="M4 6h16M4 12h16M4 18h16"
+              />
+            </svg>
+          </button>
+        </div>
+      </div>
+    </div>
+</header>
+
 <body>
     <h1 class="mr-auto ml-auto w-52 text-4xl pt-6 font-bold">Initiatives</h1>
 
@@ -59,14 +158,12 @@
                     class="translate-y-8 transform opacity-0 transition-all group-hover:translate-y-0 group-hover:opacity-100"
                     >
                     <p class="text-sm text-white absolute relative p-0">
-Project Spark: 
-We as General Relativity have established Project Spark, our effort to mentor our schools’s middle school robotics teams to guide and assist them throughout their robotics season. 8 out of 12 members of our team were on that team when we were in middle school so we thought that it would be a good idea to give back to the team now that we have different skills to offer. Our school offers three different middle school robotics teams. Robo Soccer, FLL and Vex robotics. 
-
-The 7th and 8th grade team does VEX robotics. We hope that by mentoring their team we not only help their VEX journey this year but also encourage them to stick with robotics as they enter high school and join our FTC teams. We work with them whenever we can. 
-
-On Wednesday two of our team members joined the middle school Robo soccer team. The robo soccer team uses arduinos to program robots to play soccer. Our team members help mentor the 7th and 8th graders on this team. We mostly mentor with our software team, therefore we help them the most we code. 
-
-Every Thursday members of our team will take two hours to go and help work with our school’s 6th grade FLL robotics teams, the Lightning Potatoes. It's a great learning experience to work with the 6th graders and help to teach them about more advanced engineering methods that are similar to the ones we use in highschool robotics. We have been able to help them with mechanical attachments and the creation of a line follower. It has been great to see them interact with the first world as they prepare for their first competitions.
+                        Every Thursday members of our team will take two hours to go and help work with our school’s 6th grade FLL 
+                        robotics teams, the Lightning Potatoes. It's a great learning experience to work with the 6th graders and 
+                        help to teach them about more advanced engineering methods that are similar to the ones we use in 
+                        highschool robotics. We have been able to help them with mechanical attachments and the creation of a 
+                        line follower. It has been great to see them interact with the first world as they prepare for their first 
+                        competitions. 
                     </p>
                     </div>
                 </div>
@@ -94,14 +191,9 @@ Every Thursday members of our team will take two hours to go and help work with 
                     class="translate-y-8 transform opacity-0 transition-all group-hover:translate-y-0 group-hover:opacity-100"
                     >
                     <p class="text-sm text-white absolute relative p-0">
-Project Spark: 
-We as General Relativity have established Project Spark, our effort to mentor our schools’s middle school robotics teams to guide and assist them throughout their robotics season. 8 out of 12 members of our team were on that team when we were in middle school so we thought that it would be a good idea to give back to the team now that we have different skills to offer. Our school offers three different middle school robotics teams. Robo Soccer, FLL and Vex robotics. 
-
-The 7th and 8th grade team does VEX robotics. We hope that by mentoring their team we not only help their VEX journey this year but also encourage them to stick with robotics as they enter high school and join our FTC teams. We work with them whenever we can. 
-
-On Wednesday two of our team members joined the middle school Robo soccer team. The robo soccer team uses arduinos to program robots to play soccer. Our team members help mentor the 7th and 8th graders on this team. We mostly mentor with our software team, therefore we help them the most we code. 
-
-Every Thursday members of our team will take two hours to go and help work with our school’s 6th grade FLL robotics teams, the Lightning Potatoes. It's a great learning experience to work with the 6th graders and help to teach them about more advanced engineering methods that are similar to the ones we use in highschool robotics. We have been able to help them with mechanical attachments and the creation of a line follower. It has been great to see them interact with the first world as they prepare for their first competitions.
+                        On Wednesdays two of our team members joined the middle school RoboSoccer team. The robo soccer team 
+                        uses arduinos to program robots to play soccer. Our team members help mentor the 7th and 8th graders on 
+                        this team. We mostly mentor with our software team, therefore we help them the most we code. 
                     </p>
                     </div>
                 </div>
@@ -129,14 +221,12 @@ Every Thursday members of our team will take two hours to go and help work with 
                     class="translate-y-8 transform opacity-0 transition-all group-hover:translate-y-0 group-hover:opacity-100"
                     >
                     <p class="text-sm text-white absolute relative p-0">
-Project Spark: 
-We as General Relativity have established Project Spark, our effort to mentor our schools’s middle school robotics teams to guide and assist them throughout their robotics season. 8 out of 12 members of our team were on that team when we were in middle school so we thought that it would be a good idea to give back to the team now that we have different skills to offer. Our school offers three different middle school robotics teams. Robo Soccer, FLL and Vex robotics. 
-
-The 7th and 8th grade team does VEX robotics. We hope that by mentoring their team we not only help their VEX journey this year but also encourage them to stick with robotics as they enter high school and join our FTC teams. We work with them whenever we can. 
-
-On Wednesday two of our team members joined the middle school Robo soccer team. The robo soccer team uses arduinos to program robots to play soccer. Our team members help mentor the 7th and 8th graders on this team. We mostly mentor with our software team, therefore we help them the most we code. 
-
-Every Thursday members of our team will take two hours to go and help work with our school’s 6th grade FLL robotics teams, the Lightning Potatoes. It's a great learning experience to work with the 6th graders and help to teach them about more advanced engineering methods that are similar to the ones we use in highschool robotics. We have been able to help them with mechanical attachments and the creation of a line follower. It has been great to see them interact with the first world as they prepare for their first competitions.
+                        As an FTC robotics team, we recently had the opportunity to make a difference in our community by 
+                        donating toys to a local children's hospital. So, we started a project to 3D print toys for kids in 
+                        the hospital. The project aims to bring joy and comfort to pediatric patients at Mount Sinai Hospital 
+                        through the creation of customized and personalized 3D printed toys. With the use of 3D printing technology, 
+                        the project seeks to improve the hospital experience for children and provide them with a sense of normalcy 
+                        during their hospital stay.
                     </p>
                     </div>
                 </div>
@@ -147,7 +237,7 @@ Every Thursday members of our team will take two hours to go and help work with 
 
     </div>
       
-
+    <script src="js/app.min.js "></script>
 </body>
 
 
