--- a/team.html
+++ b/team.html
@@ -76,7 +76,7 @@
             <li>
               <a
                 class="text-gray-500 transition hover:text-gray-500/75 dark:text-white dark:hover:text-white/75"
-                href="./contact.html"
+                href="https://instagram.com/generalrelativity9371?igshid=YmMyMTA2M2Y="
               >
                 Contact
               </a>
