Added side nav to other pages

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
           <a href="https://www.dalton.org/programs/high-school/curriculum/notable-programs/engineering">About</a>
           <a href="./team.html">Team</a>
           <a href="./3d.html">Robot</a>
-          <a href="./contact.html">Contact</a>
+          <a href="https://instagram.com/generalrelativity9371?igshid=YmMyMTA2M2Y=">Contact</a>
           <a href="./initiatives.html">Initiatives</a>
           <a href="./livestream.html">Livestream</a>
         </div>
