--- a/initiatives.html
+++ b/initiatives.html
@@ -109,25 +109,36 @@
           </ul>
         </nav>
   
-          <button
-            class="block rounded bg-gray-100 p-2.5 text-gray-600 transition hover:text-gray-600/75 dark:bg-gray-800 dark:text-white dark:hover:text-white/75 md:hidden"
-          >
-            <span class="sr-only">Toggle menu</span>
-            <svg
-              xmlns="http://www.w3.org/2000/svg"
-              class="h-5 w-5"
-              fill="none"
-              viewBox="0 0 24 24"
-              stroke="currentColor"
-              stroke-width="2"
-            >
-              <path
-                stroke-linecap="round"
-                stroke-linejoin="round"
-                d="M4 6h16M4 12h16M4 18h16"
-              />
-            </svg>
-          </button>
+        <button
+        class="block rounded bg-gray-100 p-2.5 text-gray-600 transition hover:text-gray-600/75 dark:bg-gray-800 dark:text-white dark:hover:text-white/75 md:hidden"
+        onclick="openNav()"
+      >
+        <span class="sr-only">Toggle menu</span>
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          class="h-5 w-5"
+          fill="none"
+          viewBox="0 0 24 24"
+          stroke="currentColor"
+          stroke-width="2"
+        >
+          <path
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            d="M4 6h16M4 12h16M4 18h16"
+          />
+        </svg>
+      </button>
+
+      <div id="side-nav" class="sidenav">
+        <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+        <a href="https://www.dalton.org/programs/high-school/curriculum/notable-programs/engineering">About</a>
+        <a href="./team.html">Team</a>
+        <a href="./3d.html">Robot</a>
+        <a href="https://instagram.com/generalrelativity9371?igshid=YmMyMTA2M2Y=">Contact</a>
+        <a href="./initiatives.html">Initiatives</a>
+        <a href="./livestream.html">Livestream</a>
+      </div>
         </div>
       </div>
     </div>
