--- a/index.html
+++ b/index.html
@@ -45,9 +45,11 @@
   <div
     class="mx-auto flex h-16 max-w-screen-xl items-center gap-8 px-4 sm:px-6 lg:px-8"
   >
-    <a class="block text-teal-600 dark:text-teal-300" href="/">
+    <a class="block text-white-600 dark:text-white-300" href="/">
       <span class="sr-only">Home</span>
-      <span style="font-family: 'VisbyBold'">9371</span>
+      <span>
+      <img class="manImg" src="img/logo.png" width="150" ></img>
+      </span>
     </a>
 
     <div class="flex flex-1 items-center justify-end md:justify-between">
