--- a/3d.html
+++ b/3d.html
@@ -19,6 +19,7 @@
 	  <script src="https://cdn.commoninja.com/sdk/latest/commonninja.js" defer></script>
 	  <div class="commonninja_component pid-84df0b9e-0a24-49b3-9732-d89a7dd10f6b"></div>
 	  <a href="index.html"> Back </a>
+	  <button class="button-40" href="index.html" role="button">Back</button>
 	  
   </body>
 </html>
