--- a/team.html
+++ b/team.html
@@ -279,7 +279,7 @@
                     class="translate-y-8 transform opacity-0 transition-all group-hover:translate-y-0 group-hover:opacity-100"
                     >
                     <p class="text-sm text-white absolute bottom-px">
-                        I'm talented at FIFA.
+                        I've driven in a kart race.
                     </p>
                     </div>
                 </div>
