--- a/index.html
+++ b/index.html
@@ -108,6 +108,14 @@
               Livestream
             </a>
           </li>
+           <li>
+              <a
+                class="text-gray-500 transition hover:text-gray-500/75 dark:text-white dark:hover:text-white/75"
+                href="./wordle.html"
+              >
+                Wordle
+              </a>
+            </li>
 	  <li>
             <a
               class="text-gray-500 transition hover:text-gray-500/75 dark:text-white dark:hover:text-white/75"
