--- a/wordle.html
+++ b/wordle.html
@@ -153,7 +153,7 @@
 </header>
 
 <body>
- <iframe style="width: 600px; height: 840px; overflow: hidden;"  scrolling="no" src="https://editor.p5js.org/c24nt/full/-ViDu--o5"></iframe>
+ <p align="center"><iframe style="width: 620px; height: 860px; overflow: hidden;"  scrolling="no" src="https://editor.p5js.org/c24nt/full/-ViDu--o5"></iframe></p>
 </body>
 
 
