--- a/initiatives.html
+++ b/initiatives.html
@@ -99,6 +99,14 @@
                 Livestream
               </a>
             </li>
+           <li>
+              <a
+                class="text-gray-500 transition hover:text-gray-500/75 dark:text-white dark:hover:text-white/75"
+                href="./wordle.html"
+              >
+                Wordle
+              </a>
+            </li>
         <li>
               <a
                 class="text-gray-500 transition hover:text-gray-500/75 dark:text-white dark:hover:text-white/75"
