--- a/initiatives.html
+++ b/initiatives.html
@@ -40,8 +40,10 @@
     >
       <a class="block text-teal-600 dark:text-teal-300" href="/">
         <span class="sr-only">Home</span>
-        <span style="font-family: 'VisbyBold'">9371</span>
-      </a>
+        <span>
+            <img class="manImg" src="img/logo.png" width="120" ></img>
+        </span>      
+    </a>
   
       <div class="flex flex-1 items-center justify-end md:justify-between">
         <nav aria-label="Site Nav" class="hidden md:block">
